small fixes
* clean up readme
* fix header link color (pure blue against black is hard to read)
* make API::FormsController#promulgate return the original form
  => backbone gets confused otherwise
* add message to name format validation
* minor grammatical changes to about page

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -192,7 +192,7 @@ header{
         a, input{
           background: transparent;
           display: block;
-          color: blue;
+          color: #8C8CCE;
           font-family: 'arial';
           font-size: 16px;
           padding: 10px;
